fix: change h2 margin slightly to align to p; feat: new about section title

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -100,7 +100,7 @@ h2 {
 	font-size: 2.5em;
 	min-width: 2.2em;
 	letter-spacing: -1px;
-	margin: .5em 0 .5em .15em;
+	margin: .5em 0 .5em .08em;
 	font-weight: 1000;
 	color: #d26972;
 
